   Release 1.23.5
   - $.kern method now returns a two item list:
     my ($kerned, $stringwidth) = $font.kern("RVX");
   - Fixed kerning of Courier, and other fonts without kerning data
     `$font.stringwidth(..., :kern)` and `$font.kern(...)` both now work.
     If the font lacks kerning data `:kern` is ignored and `$font.kern`
     returns a single element.

   Release 1.23.4
   Fixed %ISOLatin1Encoding character encoding table

   Release 1.23.3
   Fixed `provides` paths in META.info

   Release 1.23.2
   Fixed for latest rakudo
   - a multi submethod BUILD can no longer be directly inherited. Changed
     it to a singular method which calls a multi method

   Release 1.23.1
   Replaced dynamic Panda Build.pm with semi-static etc/make-metrics.pl.
   - generated AFM files should seldom change. build-time generation of modules
     was overkill. generated sources are now checked in, and can be occasionally
     regenerated, when needed.
   Release 1.23
   Making things less ISO-Latin1 centric
   - inverted @ISOLatin1Encoding => %ISOLatin1Encoding
   - removed method .wx-table('latin-1')
   - renamed method .encode => .kern
   - added :%chars option to .stringwidth, .kern
   - compute metrics for Symbol, ZapfDingbats
   - added types to declarations

   Release 1.22
   BBox - now fully parsed to an array of integers
   Kerning now supported
   - $afm.Kern - returns kerning table as a two dimensional hash array
   - $afm.stringwidth("RVX", :kern) - computes stringwith after kerning
   - $afm.encode("RVX", :kern) - encode and kern characters.

2015-04-30

   Release 1.21

   Perl 6 port of Perl 5 version 1.20. See https://metacpan.org/pod/Font::AFM for previous
   change-log and other details.

   Build
   - included full set of AFM data in etc/Core14_Fonts
   - font metrics are computed at panda build time

   Font::Metrics
   - classess are now lowercase, e.g. Font::Mertics::times-bold. Plays better with upstream