@@ -1,10 +1,8 @@
-branches:
-  except:
-    - gh-pages
 language: perl6
 sudo: false
 perl6:
   - latest
-#install:
-#  - rakudobrew build-panda
-#  - panda installdeps .
+  - 2016.12
+install:
+  - rakudobrew build-panda
+  - panda installdeps .
