@@ -1,6 +1,7 @@
 {   "perl"        : "6",
     "name"        : "Font::AFM",
     "version"     : "1.23.5",
+    "auth"        : "github:p6-pdf",
     "description" : "Interface to Adobe Font Metrics files",
     "depends"     : [ ],
     "source-url"  : "git://github.com/p6-pdf/perl6-Font-AFM.git",
