@@ -5,6 +5,8 @@
      `$font.stringwidth(..., :kern)` and `$font.kern(...)` both now work.
      If the font lacks kerning data `:kern` is ignored and `$font.kern`
      returns a single element.
+   - Make class-name and metric-class methods private
+   - Use perl6.c TWEAK submethod
 
    Release 1.23.4
    Fixed %ISOLatin1Encoding character encoding table
